preparing app for prod

--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,10 @@ Thumbs.db
 *.swp
 *.swo
 *~
+
+# Project docs (keep local only)
+*.md
+
+# Local helper scripts and migrations (not needed in GitHub)
+scripts/
+supabase/migrations/*.sql
