--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "mock-data": "node scripts/insert-mock-data.mjs"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -46,7 +47,9 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "^2.30.0",
+    "dotenv": "^17.2.3",
     "embla-carousel-react": "8.5.1",
+    "google-auth-library": "^9.0.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "^15.2.5",
@@ -64,8 +67,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
-    "zod": "^3.24.1",
-    "google-auth-library": "^9.0.0"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^22",
